--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "babel-runtime": "^6.20.0",
     "bcrypt": "^1.0.2",
+    "classnames": "^2.2.5",
     "meteor-node-stubs": "~0.2.4",
     "react-addons-pure-render-mixin": "^15.6.0",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "react-textarea-autosize": "^5.0.7"
   },
   "devDependencies": {
     "@meteorjs/eslint-config-meteor": "^1.0.5",
     "babel-eslint": "^7.2.3",
+    "date-format-lite": "^0.9.2",
     "eslint": "@3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-import-resolver-meteor": "^0.4.0",
@@ -28,6 +31,8 @@
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.1",
+    "react-dropzone": "^3.13.3",
+    "react-image-crop": "^2.0.5",
     "react-router": "^4.1.1"
   }
 }
