--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "scripts": {
     "start": "meteor run",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test" : "meteor test --driver-package practicalmeteor:mocha --port 5000"
   },
   "eslintConfig": {
     "extends": "@meteorjs/eslint-config-meteor"
@@ -21,6 +22,7 @@
     "@meteorjs/eslint-config-meteor": "^1.0.5",
     "babel-eslint": "^7.2.3",
     "date-format-lite": "^0.9.2",
+    "enzyme": "^2.9.1",
     "eslint": "@3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-import-resolver-meteor": "^0.4.0",
@@ -31,8 +33,7 @@
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.1",
-    "react-dropzone": "^3.13.3",
-    "react-image-crop": "^2.0.5",
-    "react-router": "^4.1.1"
+    "react-router": "^4.1.1",
+    "react-test-renderer": "^15.6.1"
   }
 }
