--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "babel-eslint": "^7.2.3",
     "date-format-lite": "^0.9.2",
     "enzyme": "^2.9.1",
-    "eslint": "@3.19.0",
+    "eslint": "3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-import-resolver-meteor": "^0.4.0",
     "eslint-plugin-import": "^2.6.0",
@@ -35,5 +35,9 @@
     "react-dom": "^15.6.1",
     "react-router": "^4.1.1",
     "react-test-renderer": "^15.6.1"
+  },
+  "engines": {
+    "node": "6.11.0",
+    "npm": "3.10.10"
   }
 }
